# c-code-practice

./: CMakeLists.txt  README.md  main.c  main2.c
allocators/: linearallocator.h
allocators/tests/: tests_linearallocator.h
assertions/: debugassert.h
modern-c-features/: modern_c.c
